# AI-Career-Intelligence-Assistant-App

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: __init__.py  config.py  main.py
app/components/: __init__.py  chat.py  sidebar.py  upload.py
app/prompts/: __init__.py  templates.py
app/services/: __init__.py  chunking.py  document_processor.py  rag_chain.py  vector_store.py
app/utils/: __init__.py  helpers.py
data/: .gitkeep
docs/screenshots/: README.md
tests/: conftest.py  test_chunking.py  test_document_processor.py  test_helpers.py
